# libchdr

./: .gitmodules  CMakeLists.txt
.github/workflows/: bsd.yml  cmake.yml  msys2.yml  switch.yml  vita.yml
